# historical-analysis

./: .gitignore  BFO_symbols.txt  README.md  company_list.csv  data.json  option.json  options-2024-09-03.json  options_data.txt  portfolio.json  puts.json  pyproject.toml  quotes.json
historical_analysis/: __main__.py  analyzer.py  cumulative_analysis_result.py  risk_profile.py
historical_analysis/commands/: add_capital.py  breakout_with_analysis.py  buy.py  create_portfolio.py  describe.py  historical_analysis.py  sell.py  stock.py  update.py  utils.py
historical_analysis/models/: portfolio.py
historical_analysis/strategies/: __init__.py  forty_twenty.py  strategy.py
invest_assist/: CummulativeAnalyzer.py  CumulativeOptionAnalysis.py  HighLowAnalyzer.py  OptionTradesAnalyzer.py  __main__.py  analyzer.py  company_list.py  trade.py  trade_analysis.py
invest_assist/commands/: add_capital.py  breakout.py  breakout_with_analysis.py  buy.py  create_portfolio.py  describe.py  describe_options.py  find_high_low.py  historical_analysis.py  list_portfolios.py  option_analysis.py  sell.py  stock.py  update.py  update_risk.py  utils.py
invest_assist/models/: CumulativeAnalysisResult.py  HighLowTrade.py  HighLowTradesAnalysisResult.py  Option.py  OptionPortfolio.py  OptionTrade.py  OptionTradeAnalysisResult.py  __init__.py  portfolio.py
invest_assist/strategies/: CallHighBreakoutFinder.py  CallLowBreakoutFinder.py  FindHighLow.py  HighBreakoutFinder.py  LowBreakoutFinder.py  PutHighBreakoutFinder.py  (+7 more)
tests/: test_analyzer.py  test_forty_twenty.py  test_portfolio.py
(+1 files in other folders)
