[tool.poetry]
name = "invest-assist"
version = "0.1.1"
description = ""
authors = ["Rishabh Sharma <99526730+sharma-rishabh@users.noreply.github.com >"]

[tool.poetry.dependencies]
python = "^3.12"
jugaad-data = "^0.26"
pandas = "^2.2.1"
pydantic = "^2.6.3"
click = "7.1.2"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
invest-assist = "invest_assist.__main__:main"
